Corrected table alignment, and styling

--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -70,7 +70,7 @@
 }
 
 .navbar-toggle {
-  background-color: #e5e5e5;
+  background-color: #ebebeb;
   width: 280px;
   height: 80px;
   display: flex;
